Add notes for v4.6.0-insiders

--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,43 @@
 [
     {
+        "version": "4.6.0-insiders",
+        "title": "Fiddler Everywhere v4.6.0",
+        "date": "August 30, 2023",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Show upstream proxy information in the connection popup at the lower right of the application window"
+                    },
+                    {
+                        "title": "Add new horizontal Composer layout, which can be switched on/off similar to the session inspectors layout"
+                    },
+                    {
+                        "title": "Improve the last step of the remote device connection wizard to better detect if the Fiddler CA has been trusted on the device"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Fix default terminal selection window having no default option"
+                    },
+                    {
+                        "title": "Fix link to account page for users with expired old subscriptions"
+                    },
+                    {
+                        "title": "Fix application error when trying to share a rule with manual response and no body"
+                    },
+                    {
+                        "title": "Fix Remote Device wizard unable to get the names of the local network adapters in some cases"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "4.5.0-insiders",
         "title": "Fiddler Everywhere v4.5.0",
         "date": "August 23, 2023",
