--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,23 @@
 [
     {
+        "version": "4.6.2-insiders",
+        "title": "Fiddler Everywhere v4.6.2",
+        "date": "September 19, 2023",
+        "items": [
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Offline support on Windows fails to read the email in some cases"
+                    },
+                    {
+                        "title": "Update third party dependencies to mitigate CVE-2023-4863"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "4.6.1-insiders",
         "title": "Fiddler Everywhere v4.6.1",
         "date": "September 14, 2023",
