--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -2,7 +2,7 @@
     {
         "version": "4.8.0-insiders",
         "title": "Fiddler Everywhere v4.8.0",
-        "date": "Octover 10, 2023",
+        "date": "October 10, 2023",
         "items": [
             {
                 "type": "New",
@@ -11,7 +11,7 @@
                         "title": "Add option to control zoom level from the application status bar"
                     },
                     {
-                        "title": "Fiddler will automatically try to use the Edge browser when the \"Open Browser\" button is clicked, when a Chrome installation is not found"
+                        "title": "Fiddler will automatically try to use the Edge browser when the \"Open Browser\" button is clicked, if a Chrome installation is not found"
                     }
                 ]
             },
@@ -19,7 +19,7 @@
                 "type": "Fixed",
                 "entries": [
                     {
-                        "title": "In some cases, the \"Save Response body to file\" button is missing."
+                        "title": "In some cases, the \"Save Response body to file\" button is missing"
                     },
                     {
                         "title": "Wrong screen is shown in some cases after completing the \"Filters\" wizard on the home screen"
