--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -17,7 +17,7 @@
                         "title": "Remove TLS 1.3 support for Windows 10 for both client and server connections"
                     },
                     {
-                        "title": "Update the composer editor for request headers, cookies, and parameters"
+                        "title": "Update the Composer editor for request headers, cookies, and parameters"
                     }
                 ]
             },
