--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,5 +1,43 @@
 [
     {
+        "version": "5.1.0",
+        "title": "Fiddler Everywhere v5.1.0",
+        "date": "November 9, 2023",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Add an indicator in the application's status bar, showing if remote devices are allowed to connect"
+                    },
+                    {
+                        "title": "Add an indicator in the application's status bar, showing number of enabled rules"
+                    },
+                    {
+                        "title": "Remove TLS 1.3 support for Windows 10 for both client and server connections"
+                    },
+                    {
+                        "title": "Update the Composer editor for request headers, cookies, and parameters"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Renaming custom columns showing request or response headers in the sessions grid sometimes causes the sessions to become hidden"
+                    },
+                    {
+                        "title": "Application unable to start on specific hardware configurations"
+                    },
+                    {
+                        "title": "Status bar shows wrong number of selected sessions when comparing two sessions groups"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "5.0.0",
         "title": "Fiddler Everywhere v5.0.0",
         "date": "October 26, 2023",
