--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,35 @@
 [
     {
+        "version": "5.8.1-insiders",
+        "title": "Fiddler Everywhere v5.8.1",
+        "date": "April 18, 2024",
+        "items": [
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Small UI tweaks to the new application design"
+                    },
+                    {
+                        "title": "Make the splash screen follow the application theme"
+                    },
+                    {
+                        "title": "Application not detecting the system theme on some Linux distributions"
+                    },
+                    {
+                        "title": "Query string Rules action not offering autocomplete suggestions"
+                    },
+                    {
+                        "title": "Application fails to display properly if an invalid theme is applied"
+                    },
+                    {
+                        "title": "Update third party dependencies to fix security issues"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "5.8.0-insiders",
         "title": "Fiddler Everywhere v5.8.0",
         "date": "April 9, 2024",
